welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:3: error: not found: value a
    for(ct2 <- a to 3){
               ^MethodsPicture:6: error: value Blue is not a member of object java.awt.Color
      faireV(Color.Blue)
                   ^